--- a/agent.yml
+++ b/agent.yml
@@ -5,9 +5,22 @@ scrape_configs:
   - job_name: "vmagent"
     static_configs:
       - targets: ["vmagent:8429"]
+
   - job_name: "vmalert"
     static_configs:
       - targets: ["vmalert:8880"]
+
   - job_name: "victoriametrics"
     static_configs:
       - targets: ["victoriametrics:8428"]
+
+  - job_name: "Windows"
+    scrape_interval: 15s
+    scheme: http
+    static_configs:
+      - targets: ["192.168.1.108:9182"]
+    metric_relabel_configs:
+      - source_labels: ["__name__"]
+        target_label: "__name__"
+        regex: "windows_(.*)"
+        replacement: "wmi_$1"
